# wmd

./: .gitignore  NOTE.README  README.MD  REAFME.MD  index.html  main.js  package-lock.json  package.json  preload.js
addon/grayscale/: CMakeLists.txt  binding.gyp  package-lock.json  package.json
addon/grayscale/src/: grayscale.cpp
addon/grayscale/test/: test.js
src/: index.css  main.cpp  renderer.js
